Fix rendering deadlock for software compositing

With software compositing render thread of Qt's scene graph and Viz's
thread may hit the same mutex inside output surface during frame update.

Pick-to: 6.2
Fixes: QTBUG-97598
Change-Id: Ic02e161f7b16b22c9099b93f2b1a91e78347975f
Reviewed-by: Michal Klocek <michal.klocek@qt.io>